--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -1,12 +1,25 @@
+@import '../../variables.scss';
+
 .card {
     position: relative;
-    height: 340px;
-
-    & img {
+    &::after {
+        content: '';
+        display: block;
+        padding-bottom: 31.225% ;
+    }
+    &__background {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(10, 10, 10, 0.00) 42%, rgba(4, 4, 4, 0.20) 99.99%, rgba(0, 0, 0, 0.50) 100%);
+    }
+    &__image {
+        bottom: 20px;
         width: 100%;
         height: 100%;
         object-fit: cover;
         border-radius: 10px;
+
     }
     &__title {
         position: absolute;
