--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -1,7 +1,2 @@
-.main {
-    max-width: 1440px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+@import '../../variables.scss';
+
