--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -22,7 +22,7 @@
         .footer__copyright {
             color: $text-light-color;
             font-size: $font-size-24;
-            font-weight: 400;
+            font-weight: $font-weight-light;
             margin: 0;
             padding-bottom: 29px;
         }
