--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,7 +6,7 @@ $footer-background-color: #000;
 $text-dark-color: #000;
 $text-light-color: #FFF;
 
-$main-font: Monterrat;
+$main-font: 'Montserrat';
 $font-size-10: 10px;
 $font-size-12: 12px;
 $font-size-14: 14px;
@@ -15,6 +15,7 @@ $font-size-24: 24px;
 $font-size-36: 36px;
 $font-size-48: 48px;
 $font-size-288: 288px;
+$font-weight-light: 400;
 $font-weight-normal: 500;
 $font-weight-bold: 700;
 
