--- a/src/components/DropdownsContainer/index.scss
+++ b/src/components/DropdownsContainer/index.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    &__location {
+    &__accommodation {
         display: flex;
         justify-content: space-between;
         width: 100%;
