--- a/src/variables.scss
+++ b/src/variables.scss
@@ -5,6 +5,9 @@ $background-color: #FFF;
 $footer-background-color: #000;
 $text-dark-color: #000;
 $text-light-color: #FFF;
+$filter-main-color: invert(51%) sepia(77%) saturate(1548%) hue-rotate(324deg) brightness(100%) contrast(101%);
+$filter-main-color: invert(51%) sepia(77%) saturate(1548%) hue-rotate(324deg) brightness(100%) contrast(101%);
+
 
 $main-font: 'Montserrat';
 $font-size-10: 10px;
