--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -3,16 +3,20 @@
 .banner {
     height: 223px;
     width: 100%;
-    background-color: #000;
-    border-radius: 25px;
     margin: 5px 0 43px;
     position: relative;
     &__background {
+        background-color: rgba($color: #000, $alpha: 0.5);
+        border-radius: 25px;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+    }
+    &__image {
         width: 100%;
         height: 100%;
         object-fit: cover;
         border-radius: 25px;
-        opacity: 40%;
     }
     &__title {
         position: absolute;
