--- a/src/pages/Accommodation/index.scss
+++ b/src/pages/Accommodation/index.scss
@@ -19,4 +19,12 @@
             color: $text-dark-color;
         }
     }
+    &__dropdown {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        & > div {
+            width: 46.936%;
+        }
+    }
 }
