--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,11 +1,10 @@
-// Variables
+// Variables générales
 
 $main-color: #FF6060;
 $background-color: #FFF;
 $footer-background-color: #000;
 $text-dark-color: #000;
 $text-light-color: #FFF;
-$filter-main-color: invert(51%) sepia(77%) saturate(1548%) hue-rotate(324deg) brightness(100%) contrast(101%);
 $filter-main-color: invert(51%) sepia(77%) saturate(1548%) hue-rotate(324deg) brightness(100%) contrast(101%);
 
 
