--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,10 @@
 }
 
 .size-container > * {
-  margin-inline: 100px;
+  margin-inline: 6.945%;
+  @media all and (max-width: 1024px) {
+    margin-inline: 4.572%;
+  }
 }
 
 #root {
@@ -39,8 +42,11 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+* {
   margin: 0;
+}
+
+body {
   min-width: 320px;
   min-height: 100vh;
 }
