--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -1,25 +1,30 @@
 @import '../../variables.scss';
 
+$radius-card: 25px;
+$radius-card-min: 10px;
+
 .banner {
     height: 223px;
     width: 100%;
-    margin: 5px 0 43px;
+    margin-bottom: 43px;
     position: relative;
-    &__background {
-        background-color: rgba($color: #000, $alpha: 0.5);
-        border-radius: 25px;
-        width: 100%;
-        height: 100%;
-        position: absolute;
+    &::before {
+        content: '';
+        @include absolute-after;
+        z-index: 2;
+        border-radius: $radius-card;
+        background-color: rgba(0, 0, 0, 0.5);
+        box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
     }
     &__image {
         width: 100%;
         height: 100%;
         object-fit: cover;
-        border-radius: 25px;
+        border-radius: $radius-card;
     }
     &__title {
         position: absolute;
+        z-index: 3;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -28,5 +33,31 @@
         font-size: $font-size-48;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         white-space: nowrap;
+        line-height: normal;
+    }
+    
+    @media all and (max-width: 1024px) {
+        &__title {
+            white-space: pre;
+            left: 4.78%;
+            transform: translate(0%, -50%);
+        }
+    }
+
+    @media all and (max-width: 599px) {
+        margin-bottom: 22px;
+        height: 111px;
+        &::before {
+            border-radius: $radius-card-min;
+            box-shadow: 0 0 0 
+
+        }
+        &__image {
+            border-radius: $radius-card-min;
+        }
+        &__title {
+            font-size: $font-size-24;
+        }
+
     }
 }
