--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -1,19 +1,16 @@
 @import '../../variables.scss';
 $radius-card: 10px;
 
-@mixin absolute-after {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-}
-
 .card {
     position: relative;
     max-height: 340px;
+    &::before {
+        content: '';
+        @include absolute-after;
+        z-index: 2;
+        border-radius: $radius-card;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(10, 10, 10, 0.00) 42%, rgba(0, 0, 0, 0.50) 100%);
+    }
     &::after {
         content: '';
         display: block;
@@ -25,22 +22,19 @@ $radius-card: 10px;
         object-fit: cover;
         border-radius: $radius-card;
     }
-    &::before {
-        content: '';
-        @include absolute-after;
-        z-index: 2;
-        border-radius: $radius-card;
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(10, 10, 10, 0.00) 42%, rgba(0, 0, 0, 0.50) 100%);;
-    }
     &__title {
         position: absolute;
         z-index: 3;
         left: 20px;
         bottom: 20px;
+        padding-right: 20px;
         font-size: $font-size-18;
         font-weight: $font-weight-bold;
         color: $text-light-color;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
     }
+    @media all and (max-width: 599px) {
+        max-height: 255px;
+    }
+    
 }
