--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -4,9 +4,6 @@
     display: table-row;
     height: 209px;
     background-color: $footer-background-color;
-
-    
-
     &__container {
         display: flex;
         flex-direction: column;
@@ -25,6 +22,15 @@
             font-weight: $font-weight-light;
             margin: 0;
             padding-bottom: 29px;
+            text-align: center;
+        }
+    }
+    @media all and (max-width: 599px) {
+        .footer__copyright {
+            font-size: $font-size-12;
+            padding-bottom: 58px;
+            width: 100px;
+
         }
     }
 }
