--- a/src/variables.scss
+++ b/src/variables.scss
@@ -21,3 +21,13 @@ $font-weight-light: 400;
 $font-weight-normal: 500;
 $font-weight-bold: 700;
 
+
+@mixin absolute-after {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
