Finalisation dropdown transition + responsive

--- a/src/components/Dropdown/index.scss
+++ b/src/components/Dropdown/index.scss
@@ -7,19 +7,37 @@
     bottom: 0px;
 }
 
+$height-menu: 52px;
+$height-menu-min: 30px;
+
 $padding-content: 20px;
+$padding-content-min: 15px;
+
+$padding-menu-right: 20px;
+$padding-menu-right-min: 10px;
+$padding-menu-left: 15px;
+$padding-menu-left-min: 10px;
+
+
+
 
 .dropdown {
+    overflow: hidden;
+    position: relative;
     margin-bottom: 30px;
-    max-width: 1023px;
-   // overflow: hidden;
-   // position: relative;
+    width: 100%;
+    min-height: $height-menu;
     &__menu {
         background-color: $main-color;
         display: flex;
         justify-content: space-between;
-        padding: 10px 20px 10px 15px;
+        align-items: center;
+        height: $height-menu;
+        padding: 0 $padding-menu-right 0 $padding-menu-left;
         border-radius: 5px;
+        position: absolute;
+        width: calc(100% - $padding-menu-right - $padding-menu-left);
+        z-index: 2;
         .dropdown__title {
             font-size: $font-size-24;
             font-weight: $font-weight-bold;
@@ -33,18 +51,60 @@ $padding-content: 20px;
             display: flex;
             justify-content: center;
             align-items: center;
-        }
+            transform: rotate(0deg) scale(1);
+            transition: transform 300ms;
+            &--open {
+                transform: rotate(-180deg) scale(1);
+            }
+        }        
     }
     &__content {
+        max-height: 0px;
         background-color: darken($background-color, 3.5%);
-        margin: 0;
         padding: $padding-content;
         font-size: $font-size-18;
         font-weight: $font-weight-light;
         border-radius: 0 0 5px 5px;
-        height: calc(100% - 56px - calc($padding-content*2));
-        & p {
-            margin: 0;
+        transform: translateY(-200%);
+        opacity: 0;
+        transition: all 400ms ;
+        &::before {
+            content: "";
+            display: block;
+            padding-top: $height-menu;
+        }
+        &--open {
+            transform: translateY(0);
+            opacity: 1;
+            max-height: 500px;
+        }
+    }
+    @media all and (max-width: 599px) {
+        min-height: $height-menu-min;
+        margin-bottom: 20px;
+        &__menu {
+            height: $height-menu-min;
+            padding: 0 0 0 $padding-menu-left-min;
+            width: calc(100% - $padding-menu-left-min);
+            .dropdown__title {
+                font-size: $font-size-13!important;
+            }
+            .dropdown__button {
+                height: 24px;
+                width: 24px;
+                transform: rotate(0deg) scale(0.65);
+                &--open {
+                    transform: rotate(-180deg) scale(0.65);
+                }
+
+            }
+        }
+        &__content {
+            font-size: $font-size-12;
+            padding: $padding-content-min;
+            &::before {
+                padding-top: $height-menu-min;
+            }
         }
     }
 }
