--- a/src/variables.scss
+++ b/src/variables.scss
@@ -11,6 +11,7 @@ $filter-main-color: invert(51%) sepia(77%) saturate(1548%) hue-rotate(324deg) br
 $main-font: 'Montserrat';
 $font-size-10: 10px;
 $font-size-12: 12px;
+$font-size-13: 13px;
 $font-size-14: 14px;
 $font-size-18: 18px;
 $font-size-24: 24px;
