--- a/src/variables.scss
+++ b/src/variables.scss
@@ -13,10 +13,14 @@ $font-size-10: 10px;
 $font-size-12: 12px;
 $font-size-13: 13px;
 $font-size-14: 14px;
+$font-size-16: 16px;
 $font-size-18: 18px;
+$font-size-22: 22px;
 $font-size-24: 24px;
 $font-size-36: 36px;
 $font-size-48: 48px;
+$font-size-96: 96px;
+$font-size-144: 144px;
 $font-size-288: 288px;
 $font-weight-light: 400;
 $font-weight-normal: 500;
