--- a/src/components/Tag/index.scss
+++ b/src/components/Tag/index.scss
@@ -3,6 +3,7 @@
 .tags {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     &__tag {
         display: block;
         font-size: $font-size-14;
@@ -13,8 +14,18 @@
         background-color: $main-color;
         border-radius: 10px;
         margin-right: 10px;
+        margin-bottom: 6.5px;
         text-align: center;
         padding: 2px 8px;
         height: 21px;
+        white-space : nowrap;
+        
+    }
+    @media all and (max-width: 599px) {
+      &__tag {
+        font-size: $font-size-10;
+        height: 14px;
+        min-width: 68px;
+      }  
     }
 }
