--- a/src/pages/About/index.scss
+++ b/src/pages/About/index.scss
@@ -4,7 +4,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 8px;
     .dropdown {
         max-width: 1023px;
+    }
+    @media all and (max-width: 599px) {
+        margin-bottom: 0;
     }
 }
