--- a/src/pages/Accommodation/index.scss
+++ b/src/pages/Accommodation/index.scss
@@ -1,11 +1,12 @@
 @import '../../variables.scss';
 
 .accom {
+    margin-bottom: 20px;
     &__grid {
         display: grid;
         grid-template-columns: 2fr 1fr;
         grid-row-gap: 20px;
-        margin: 30px 0 20px;
+        margin: 30px 0 17.5px;
         .accom__title {
             font-size: $font-size-36;
             font-weight: $font-weight-normal;
@@ -18,6 +19,9 @@
             font-weight: $font-weight-normal;
             color: $text-dark-color;
         }
+        .rate {
+            transform: translateY(-12px);
+        }
     }
     &__dropdown {
         display: flex;
@@ -27,8 +31,54 @@
             width: 46.936%;
             .dropdown__title {
                 font-size: $font-size-18;
-
+            }
+            &__content {
+                height: 100%;
             }
         }
     }
+    @media all and (max-width: 1024px) {
+        &__grid {
+            grid-template-columns: 1fr 1fr;
+            margin: 30px 0 24px;
+            .accom__text {
+                grid-column: 1 / 3;
+            }
+            .host {
+                grid-row-start: 3;
+                grid-column-start: 2;
+            }
+            .tags {
+                grid-column: 1 / 3;
+            }
+            .rate {
+                grid-row-start: 3;
+                grid-column-start: 1;
+                justify-content: flex-start;
+                transform: translateY(0);
+                margin: auto 0;
+            }
+        }
+        &__dropdown {
+            flex-direction: column;
+            .dropdown {
+                width: 100%;
+            }
+        }
+    }
+    @media all and (max-width: 599px) {
+        margin-bottom: 7px;
+        &__grid {
+            grid-row-gap: 10px;
+            margin: 15px 0 13.5px;
+            .accom__title {
+                font-size: $font-size-18;
+                margin-bottom: 5px;
+            }
+            .accom__loc {
+                font-size: $font-size-14;
+            }
+        }
+    }
+    
 }
