--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -2,39 +2,43 @@
 $radius-card: 10px;
 
 .card {
-    position: relative;
-    max-height: 340px;
-    &::before {
-        content: '';
-        @include absolute-after;
-        z-index: 2;
-        border-radius: $radius-card;
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(10, 10, 10, 0.00) 42%, rgba(0, 0, 0, 0.50) 100%);
-    }
-    &::after {
-        content: '';
-        display: block;
-        padding-bottom: 31.09% ;
-    }
-    &__image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: $radius-card;
-    }
-    &__title {
-        position: absolute;
-        z-index: 3;
-        left: 20px;
-        bottom: 20px;
-        padding-right: 20px;
-        font-size: $font-size-18;
-        font-weight: $font-weight-bold;
-        color: $text-light-color;
-        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    }
-    @media all and (max-width: 599px) {
-        max-height: 255px;
-    }
-    
+  position: relative;
+  max-height: 340px;
+  &::before {
+    content: '';
+    @include absolute-before;
+    z-index: 2;
+    border-radius: $radius-card;
+    background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(10, 10, 10, 0) 42%,
+      rgba(0, 0, 0, 0.5) 100%
+    );
+  }
+  &::after {
+    content: '';
+    display: block;
+    padding-bottom: 31.09%;
+  }
+  &__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: $radius-card;
+  }
+  &__title {
+    position: absolute;
+    z-index: 3;
+    left: 20px;
+    bottom: 20px;
+    padding-right: 20px;
+    font-size: $font-size-18;
+    font-weight: $font-weight-bold;
+    color: $text-light-color;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  @media all and (max-width: 599px) {
+    max-height: 255px;
+  }
 }
