--- a/src/components/Rate/index.scss
+++ b/src/components/Rate/index.scss
@@ -1,20 +1,19 @@
-@import '../../variables.scss';
+@import '../../styles/variables.scss';
 
 .rate {
-    display: flex;
-    justify-content: end;
-    height: 24px;
-    &__star {
-       margin: 0 8px;
-       &--color {
-            filter: $filter-main-color; 
-       }
+  display: flex;
+  justify-content: end;
+  height: 24px;
+  &__star {
+    margin: 0 8px;
+    &--color {
+      filter: $filter-main-color;
     }
-    @media all and (max-width: 599px) {
-        height: 13px;
-        &__star {
-            margin: 0 3.25px;
-        }  
-      }
-    
+  }
+  @media all and (max-width: 599px) {
+    height: 13px;
+    &__star {
+      margin: 0 3.25px;
+    }
+  }
 }
