--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -1,63 +1,62 @@
-@import '../../variables.scss';
+@import '../../styles/variables.scss';
 
 $radius-card: 25px;
 $radius-card-min: 10px;
 
 .banner {
-    height: 223px;
+  height: 223px;
+  width: 100%;
+  margin-bottom: 43px;
+  position: relative;
+  &::before {
+    content: '';
+    @include absolute-before;
+    z-index: 2;
+    border-radius: $radius-card;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  }
+  &__image {
     width: 100%;
-    margin-bottom: 43px;
-    position: relative;
+    height: 100%;
+    object-fit: cover;
+    border-radius: $radius-card;
+  }
+  &__title {
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    color: $text-light-color;
+    font-size: $font-size-48;
+    font-weight: $font-weight-bold;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    white-space: nowrap;
+    line-height: normal;
+  }
+
+  @media all and (max-width: 1024px) {
+    &__title {
+      white-space: pre;
+      left: 4.78%;
+      transform: translate(0%, -50%);
+    }
+  }
+
+  @media all and (max-width: 599px) {
+    margin-bottom: 22px;
+    height: 111px;
     &::before {
-        content: '';
-        @include absolute-after;
-        z-index: 2;
-        border-radius: $radius-card;
-        background-color: rgba(0, 0, 0, 0.5);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+      border-radius: $radius-card-min;
+      box-shadow: 0 0 0;
     }
     &__image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: $radius-card;
+      border-radius: $radius-card-min;
     }
     &__title {
-        position: absolute;
-        z-index: 3;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        margin: 0;
-        color: $text-light-color;
-        font-size: $font-size-48;
-        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        white-space: nowrap;
-        line-height: normal;
+      font-size: $font-size-24;
     }
-    
-    @media all and (max-width: 1024px) {
-        &__title {
-            white-space: pre;
-            left: 4.78%;
-            transform: translate(0%, -50%);
-        }
-    }
-
-    @media all and (max-width: 599px) {
-        margin-bottom: 22px;
-        height: 111px;
-        &::before {
-            border-radius: $radius-card-min;
-            box-shadow: 0 0 0 
-
-        }
-        &__image {
-            border-radius: $radius-card-min;
-        }
-        &__title {
-            font-size: $font-size-24;
-        }
-
-    }
+  }
 }
