--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -1,9 +1,9 @@
-@import '../../variables.scss';
+@import '../../styles/variables.scss';
 $radius-card: 10px;
 
 .card {
   position: relative;
-  max-height: 340px;
+  height: 340px;
   &::before {
     content: '';
     @include absolute-before;
@@ -15,11 +15,6 @@ $radius-card: 10px;
       rgba(10, 10, 10, 0) 42%,
       rgba(0, 0, 0, 0.5) 100%
     );
-  }
-  &::after {
-    content: '';
-    display: block;
-    padding-bottom: 31.09%;
   }
   &__image {
     width: 100%;
@@ -39,6 +34,6 @@ $radius-card: 10px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   @media all and (max-width: 599px) {
-    max-height: 255px;
+    height: 255px;
   }
 }
