--- a/src/components/Carrousel/index.scss
+++ b/src/components/Carrousel/index.scss
@@ -1,77 +1,73 @@
-@import '../../variables.scss';
+@import '../../styles/variables.scss';
+
+@mixin imageTransition {
+  position: absolute;
+  z-index: 1;
+  display: block;
+  transition: transform 700ms;
+}
 
 .carrousel {
-    height: 415px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 25px;
+  height: 415px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 25px;
+  &__arrow {
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba($color: #000000, $alpha: 0);
+    padding: 0;
+    margin: 0 23px;
+    &--right {
+      right: 0;
+      transform: translateY(-50%) rotate(180deg);
+    }
+  }
+  &__numbering {
+    position: absolute;
+    z-index: 2;
+    bottom: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: $font-size-18;
+    font-weight: $font-weight-normal;
+    color: $text-light-color;
+  }
+  &__pictures {
+    display: flex;
+    & > img {
+      display: none;
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+    .prev {
+      @include imageTransition;
+      transform: translateX(-100%);
+    }
+    .active {
+      @include imageTransition;
+      transform: translateX(0);
+    }
+    .next {
+      @include imageTransition;
+      transform: translateX(100%);
+    }
+  }
+  @media all and (max-width: 599px) {
+    height: 255px;
+    border-radius: 10px;
     &__arrow {
-        position: absolute;
-        z-index: 2;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: rgba($color: #000000, $alpha: 0);
-        padding: 0;
-        margin: 0 23px;
-        &--right {
-            right: 0;
-            transform: translateY(-50%) rotate(180deg);
-        }
+      margin: 0;
+      & > img {
+        height: 20px;
+        padding: 100% 6px;
+      }
     }
     &__numbering {
-        position: absolute;
-        z-index: 2;
-        bottom: 25px;
-        left: 50%;
-        transform: translateX(-50%);
-        font-size: $font-size-18;
-        font-weight: $font-weight-normal;
-        color: $text-light-color;
-        
+      display: none;
     }
-    &__pictures {
-        display: flex;
-        & > img {
-            display: none;
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-        }
-        .prev {
-            position: absolute;
-            z-index: 1;
-            display: block;
-            transition: transform 700ms;
-            transform: translateX(-100%);
-        }
-        .active {
-            position: absolute;
-            z-index: 1;
-            display: block;
-            transition: transform 700ms;
-            transform: translateX(0);
-        }
-        .next {
-            position: absolute;
-            z-index: 1;
-            display: block;
-            transition: transform 700ms;
-            transform: translateX(100%);
-        }
-    }
-    @media all and (max-width: 599px) {
-        height: 255px;
-        border-radius: 10px;
-        &__arrow {
-            margin: 0;
-            & > img {
-                height: 20px;
-                padding: 100% 6px;
-
-            }
-        }  
-        &__numbering {
-            display: none;
-        }
-      }
+  }
 }
