--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,36 +1,35 @@
-@import '../../variables.scss';
+@import '../../styles/variables.scss';
 
 .footer {
-    display: table-row;
-    height: 209px;
-    background-color: $footer-background-color;
-    &__container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        height: 100%;
+  display: table-row;
+  height: 209px;
+  background-color: $footer-background-color;
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
 
-        .footer__logo {
-            height: 40px;
-            padding-top: 66px;
-        }
-        
-        .footer__copyright {
-            color: $text-light-color;
-            font-size: $font-size-24;
-            font-weight: $font-weight-light;
-            margin: 0;
-            padding-bottom: 29px;
-            text-align: center;
-        }
+    .footer__logo {
+      height: 40px;
+      padding-top: 66px;
+      filter: $filter-background-color;
     }
-    @media all and (max-width: 599px) {
-        .footer__copyright {
-            font-size: $font-size-12;
-            padding-bottom: 58px;
-            width: 100px;
 
-        }
+    .footer__copyright {
+      color: $text-light-color;
+      font-size: $font-size-24;
+      font-weight: $font-weight-normal;
+      padding-bottom: 29px;
+      text-align: center;
     }
+  }
+  @media all and (max-width: 599px) {
+    .footer__copyright {
+      font-size: $font-size-12;
+      padding-bottom: 58px;
+      width: 100px;
+    }
+  }
 }
