--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,35 +1,34 @@
-@import '../../variables.scss';
+@import '../../styles/variables.scss';
 
 .header {
-    display: flex;
-    justify-content: space-between;    
-    align-items: center;
-    margin: 45px 0 50px;
-    height: 68px;
-    & a {
-        height: 100%;
-    }
-    &__logo {
-        height: 100%;
-    }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 45px 0 50px;
+  height: 68px;
+  & a {
+    height: 100%;
+  }
+  &__logo {
+    height: 100%;
+  }
+  &__link {
+    font-size: $font-size-24;
+    margin-left: 60px;
+  }
+  &__nav a.active {
+    text-decoration: underline;
+  }
+  @media all and (max-width: 599px) {
+    margin: 20px 0 27px;
+    height: 47px;
     &__link {
-        color: $text-dark-color;
-        font-size: $font-size-24;
-        margin-left: 60px;
+      text-transform: uppercase;
+      font-size: $font-size-12;
+      margin-left: 26px;
     }
-    &__nav a.active {
-        text-decoration: underline;
-    }
-    @media all and (max-width: 599px) {
-        margin: 20px 0 27px;
-        height: 47px;
-        &__link {
-            text-transform: uppercase;
-            font-size: $font-size-12;
-            margin-left: 26px;
-        }
-    }
-    @media all and (max-width: 359px) {
-        height: 30px;
-    }
+  }
+  @media all and (max-width: 359px) {
+    height: 30px;
+  }
 }
