--- a/src/pages/About/index.scss
+++ b/src/pages/About/index.scss
@@ -1,14 +1,14 @@
-@import '../../variables.scss';
+@import '../../styles/variables.scss';
 
 .dropdownsContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 8px;
-    .dropdown {
-        max-width: 1023px;
-    }
-    @media all and (max-width: 599px) {
-        margin-bottom: 0;
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 8px;
+  .dropdown {
+    max-width: 1023px;
+  }
+  @media all and (max-width: 599px) {
+    margin-bottom: 0;
+  }
 }
