--- a/src/pages/Error/index.scss
+++ b/src/pages/Error/index.scss
@@ -1,54 +1,51 @@
-@import '../../variables.scss';
+@import '../../styles/variables.scss';
 
 .error {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  &__404 {
+    color: $main-color;
+    font-size: $font-size-288;
+    font-weight: $font-weight-bold;
+  }
+  &__text {
+    color: $main-color;
+    font-size: $font-size-36;
+    font-weight: $font-weight-normal;
+    margin-bottom: 100px;
+    text-align: center;
+  }
+  &__link {
+    font-size: $font-size-18;
+    font-weight: $font-weight-normal;
+    text-decoration-line: underline;
+    margin-bottom: 100px;
+  }
+  @media all and (max-width: 1024px) {
     &__404 {
-        color: $main-color;
-        font-size: $font-size-288;
-        font-weight: $font-weight-bold;
-        margin: 0;
+      font-size: $font-size-144;
     }
     &__text {
-        color: $main-color;
-        font-size: $font-size-36;
-        font-weight: $font-weight-normal;
-        margin-top: 0;
-        margin-bottom: 100px;
-        text-align: center;
+      font-size: $font-size-22;
+      margin-bottom: 60px;
     }
     &__link {
-        color: $text-dark-color;
-        font-size: $font-size-18;
-        font-weight: $font-weight-normal;
-        text-decoration-line: underline;
-        margin-bottom: 100px;
+      font-size: $font-size-16;
     }
-    @media all and (max-width: 1024px) {
-        &__404 {
-            font-size: $font-size-144;
-        }
-        &__text {
-            font-size: $font-size-22;
-            margin-bottom: 60px;
-        }
-        &__link {
-            font-size: $font-size-16;
-        }
+  }
+  @media all and (max-width: 599px) {
+    &__404 {
+      font-size: $font-size-96;
+      margin-top: 20px;
     }
-    @media all and (max-width: 599px) {
-        &__404 {
-            font-size: $font-size-96;
-            margin-top: 20px
-        }
-        &__text {
-            font-size: $font-size-18;
-            margin-bottom: 50px;
-        }
-        &__link {
-            font-size: $font-size-14;
-            margin-bottom: 80px;
-        }
+    &__text {
+      font-size: $font-size-18;
+      margin-bottom: 50px;
     }
+    &__link {
+      font-size: $font-size-14;
+      margin-bottom: 80px;
+    }
+  }
 }
