--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -1,23 +1,23 @@
-@import '../../variables.scss';
+@import '../../styles/variables.scss';
 
 .cardsContainer {
-    background-color: darken($background-color, 3.5%);
-    margin-bottom: 50px;
-    border-radius: 25px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 5.264%;
-    grid-row-gap: 50px;
-    padding: 4.517% 4.033% 3.468%;
-    @media all and (max-width: 1024px) {
-        grid-template-columns: 1fr 1fr;
-        grid-row-gap: 37px;
-    }
-    @media all and (max-width: 599px) {
-        grid-template-columns: 1fr;
-        padding: 0;
-        background-color: $background-color;
-        grid-row-gap: 20px;
-        margin-bottom: 27px;
-    }
+  background-color: darken($background-color, 3.5%);
+  margin-bottom: 50px;
+  border-radius: 25px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 5.264%;
+  grid-row-gap: 50px;
+  padding: 4.517% 4.033% 3.468%;
+  @media all and (max-width: 1024px) {
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 37px;
+  }
+  @media all and (max-width: 599px) {
+    grid-template-columns: 1fr;
+    padding: 0;
+    background-color: $background-color;
+    grid-row-gap: 20px;
+    margin-bottom: 27px;
+  }
 }
